# surround-prez-features

./: README.md  pyproject.toml
data/: floods.ttl
ontologies/: ontologies_context.ttl
scripts/: config.py  sparql_utils.py  update.py  validate.py
