[tool.poetry]
name = "floods-prez-features"
version = "0.1.0"
description = ""
authors = ["Jamie Feiss"]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.1.1"
pyshacl = "^0.18.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
